# multi_account

./: .gitignore  LICENSE  README.md  pyproject.toml  simple_test.py  test_mcp.py
.cursor/rules/: pythonuv.mdc
data/experiments/configs/: account_count_experiment.json  basic_dv_p_experiment.json  basic_n_p_experiment.json  basic_v0_p_experiment.json
data/experiments/csv/: xp_20250603062424.csv  xp_20250603062425.csv  xp_20250603062427.csv  xp_20250603063144.csv
document/ai/: MCP_server_manual.md  experiment_plan.md  multi_account_optimization_report.md  plot_interpretation_correction_plan.md  シミュレーション設計.md  実装メモ_DP.md  実装計画.md  実験方法.md  期待値逐次解法.md  清書済み問題意識と解析方針.md
document/fleeting/: AI論文計画.md  DPの追加要望.md  レートの整数制限.md  問題意識.md  実験予定.md  実験予定2.md  結果のファイル保存.md  解析的な理論計算.md  解法の方針.md  逐次解法.md
document/permanent/: MCPサーバー利用マニュアル.md  モンテカルロシミュレーション.md  問題意識と解析方針.md  実装計画.md  実験方法.md  実験計画書.md  整数レート計算.md  期待値逐次解法.md  結果ファイル仕様.md
rate_matching_sim/: README.md  run_client.py  run_server.py
rate_matching_sim/client/: index.html  main.js
rate_matching_sim/core/: simulation.py
rate_matching_sim/server/: mcp_server.py
src/: cli.py  mcp_server.py
src/core/: dp.py  dp_wrapper.py  parameters.py  result_cache.py  state.py
src/experiments/: __init__.py  data_manager.py  experiment_runner.py  experiments.py  main_experiments.py  plotting.py  sample_experiments.py
src/simulator/: __init__.py  policy.py  simulation.py  visualization.py
src/tests/: test_dp.py  test_mcp_server.py  test_simulator.py
tests/: __init__.py  conftest.py  test_dp.py  test_simulator.py
